--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-asgiref==3.6.0
-backports.zoneinfo==0.2.1;python_version<"3.9"
-certifi==2023.5.7
-charset-normalizer==3.1.0
-coreapi==2.3.3
-coreschema==0.0.4
+celery==5.2.7
 Django==4.2.1
+django-celery-results==2.4.0
 django-cors-headers==4.0.0
+django-debug-toolbar==4.1.0
 django-environ==0.10.0
 django-filter==23.2
 django-jazzmin==2.6.0
@@ -13,22 +10,10 @@ django-model-utils==4.3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.6
+ffmpeg==1.4
 gunicorn==20.1.0
-idna==3.4
-inflection==0.5.1
-itypes==1.2.0
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-packaging==23.1
 Pillow==9.5.0
 psycopg==3.1.9
 psycopg-binary==3.1.9
-PyJWT==2.7.0
-pytz==2023.3
+redis==4.6.0
 requests==2.31.0
-ruamel.yaml==0.17.26
-ruamel.yaml.clib==0.2.7
-sqlparse==0.4.4
-typing-extensions==4.6.0
-uritemplate==4.1.1
-urllib3==2.0.2
