--- a/requirements.txt
+++ b/requirements.txt
@@ -59,4 +59,4 @@ drf_api_logger==1.1.15
 flower==2.0.1
 django-celery-beat==2.5.0
 django-silk==5.3.1
-django-db-connection-pool[postgresql]
+psycopg-pool==3.2.4
