--- a/requirements.txt
+++ b/requirements.txt
@@ -58,5 +58,4 @@ wcwidth==0.2.6
 drf_api_logger==1.1.15
 flower==2.0.1
 django-celery-beat==2.5.0
-django-silk==5.3.1
-psycopg-pool==3.2.4
+django-db-connection-pool[postgresql]
